# SaltedFish

./: .gitignore  Cargo.toml  Makefile  README.md
api/: Cargo.toml  build.rs
prermissions/: Cargo.toml
proto/: saltedfish.proto
saltedfish/: Cargo.toml  README.md
saltedfish/src/: conf.rs  core.rs  lib.rs
src/: client.rs  server.rs
