[package]
name = "saltedfish"
version = "0.1.0"
authors = ["dollarkiller <adapawang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = "0.8.14"
serde_json = "1.0.60"

once_cell = "1.5.2"

tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }